Add display:block at items for that we can use the "a" tag html in items.

--- a/example.html
+++ b/example.html
@@ -4,12 +4,25 @@
 	<link rel="stylesheet" type="text/css" href="sddm-style.css">
 </head>
 <body>
+	Example with "div":<br>
 	<div class="button sddm">
 		<div class="label">Go here baby!</div>
 		<div class="sddm_container">
 			<div class="item_sddm">Broda Noel</div>
 			<div class="item_sddm">Broda Noel</div>
 			<div class="item_sddm">Broda Noel, Everywhere!</div>
+		</div>
+	</div>
+
+	<br><br><br><br><br><br>
+	
+	Example with "a":<br>
+	<div class="button sddm">
+		<div class="label">Go here baby!</div>
+		<div class="sddm_container">
+			<a class="item_sddm" href="/test">Broda Noel</a>
+			<a class="item_sddm" href="/test">Broda Noel</a>
+			<a class="item_sddm" href="/test">Broda Noel, Everywhere!</a>
 		</div>
 	</div>
 </body>
